# uaamg

./: .gitignore  CMakeLists.txt  README.md  README.txt
CG_benchmarks/: CMakeLists.txt  main.cpp
CG_benchmarks/pcgsolver/: blas_wrapper.h  pcg_solver.h  sparse_matrix.h
CG_benchmarks/scene/: config.yaml
FLIP_vdb/: .gitignore  CMakeLists.txt  FLIP_vdb.cpp  FLIP_vdb.h  animation_utils.h  main.cpp  sdf_vel_pair.cpp  sdf_vel_pair.h  vdb_velocity_extrapolator.cpp
FLIP_vdb/scene/: config.yaml  vdbflip.txt
SIMD_UAAMG/: CMakeLists.txt  packed3grids.cpp  packed3grids.h  simd_vdb_poisson.cpp  simd_vdb_poisson.h  simd_viscosity3d.cpp  simd_viscosity3d.h
Scene_Houdini/: README.txt
Scene_Houdini/non-vis_fan_mixer/: README.txt  config_fan_mixer_lowres_36M_particle.yaml  config_fan_mixer_paper_onebillion.yaml  fan_mixer_render.hipnc  fan_mixer_scene_generate.hipnc  instructions.txt
Scene_Houdini/non-vis_fan_mixer/fan_mixer_geo/: Turbine.STL
Scene_Houdini/non-vis_meteor/: README.txt  config_meteor_lowres.yaml  config_meteor_paper.yaml  instructions.txt  meteor_generate_scene.hipnc  meteor_scene_render.hipnc
Scene_Houdini/non-vis_river_fall/: README.txt  config_water_fall.yaml  instructions.txt  water_fall_render.hipnc
Scene_Houdini/non-vis_river_fall/HDR_029_Sky_Cloudy_Free/: HDRI Hub - Facebook.URL  HDRI Hub - Free Samples.URL  HDRI Hub - Linkedin.URL  HDRI Hub - The Shop.URL  Readme.txt  What-is-sIBL.txt
Scene_Houdini/non-vis_river_fall/HDR_029_Sky_Cloudy_Free/HDR_029_Sky_Cloudy_Free/: HDR_029_Sky_Cloudy.ibl  HDR_029_Sky_Cloudy_Env.hdr  HDR_029_Sky_Cloudy_Prev.tga  HDR_029_Sky_Cloudy_Thumb.tga
Scene_Houdini/vis_buckling/: README.txt  buckling.hipnc  config_buckling_vis50.yaml  config_buckling_vis500.yaml  config_buckling_vis5000.yaml  instructions.txt  sphere_source.vdb
Scene_Houdini/vis_bunny_sig/: README.txt  bunny.hipnc  bunny_rendering.hipnc  config_bunny.yaml
Scene_Houdini/vis_cut_bunny/: README.txt  config_bunny.yaml  config_bunny_low_res.yaml  cut_bunny_generate_scene_and_Houdini_sim.hipnc  cut_bunny_scene_render.hipnc
Scene_Houdini/vis_fan_mixer/: README.txt  config_fan_mixer.yaml  config_fan_mixer_low_res.yaml  fan_mixer_scene_generate.hipnc  fan_mixer_viscous_render.hipnc
Scene_Houdini/vis_meteor/: README.txt  config_meteor_low_res.yaml  config_meteor_paper_highres.yaml  meteor_generate_scene.hipnc  vis_meteor_scene_render.hipnc
pcgsolver/: blas_wrapper.h  sparse_matrix.h
singletons/: CMakeLists.txt  SimOptions.cpp  YamlSingleton.h
viscosity_unit_test/: CMakeLists.txt  main.cpp
